@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2012-06-18 (SVN):
+    * opengl: Dynamically load glGetTexParameterfv at runtime and skip
+      the anisotropy driver-lock status if loading fails.
+
+2012-06-18 (SVN):
     * cd_sdl.c, gl_vidsdl.c: Disabled the putenv() calls on MorphOS.
 
 2012-06-18 (SVN):
